docs/i18n/de/docusaurus-plugin-content-docs/version-0.19.0/definitions.md
---
sidebar_position: 2
sidebar_label: Bedrohungsdefinitionen
title: Bedrohungsdefinitionen & Erkennungsstufen
---

# Bedrohungsdefinitionen & Erkennungsstufen

AMWScan liefert seine eingebetteten Erkennungsdaten über die `Signatures`-API. Diese Definitionen benötigen keinen Download oder Remote-Reputations-Check.

Eingebettete Definitionen umfassen:

- Klartextfragmente und optimierte reguläre Ausdrücke.
- Exakte SHA-256-Malware-Hashes, die aus dem Fixture-Korpus des Repositories erzeugt wurden.
- Festbreiten- bekannte Malware-MD5-Präfix-Kandidaten.
- Normalisierte Legacy-Core-SHA-256-Signaturen, die vom optionalen WordPress-Modul verwendet werden.
- 54 verdächtige Domains, die aus Malware-Fixtures stammen und ausgeschlossen werden, wenn sie in sauberen Fixtures gefunden werden oder als legitime gemeinsame Dienste identifiziert werden.

## Integritäts-Manifest

Vertrauenswürdige Manifeste melden fehlende, geänderte und unerwartete verwaltete Dateien. Die WordPress-Core-Integrität umfasst Root-Core-Dateien, `wp-admin` und `wp-includes`; sie schließt das benutzerverwaltete `wp-content` aus, einschließlich optionaler gebündeter Plugins und Themes. Unter Windows werden Manifestpfade case-insensitiv verglichen, damit das Dateisystemverhalten übereinstimmt.

Das WordPress-Plugin bietet die Aktion **Vertraute Datei wiederherstellen** für fehlende Dateien, die von einem vertrauenswürdigen WordPress-Core-Manifest erfasst wurden, wenn `ext-zip` verfügbar ist, einschließlich optionaler gebündeter Dateien, die in historischen Berichten erhalten bleiben. Es lädt die passende offizielle WordPress-Version herunter, extrahiert nur die ausgewählte Datei, prüft seine vertrauenswürdige Manifest-Prüfsumme und schreibt sie in das gescannte WordPress-Root. Ausnahmen bleiben für Funde verfügbar, die in der Konfiguration der Website erwartet werden.

## Lokale Maltrail-Definitionen

Beim Start des Scans lädt AMWScan die aktuellen Malware-Domain-Traces von Maltrail in seinen privaten Cache des Betriebssystems und baut den lokalen Index neu auf. Der Cache liegt außerhalb des gescannten Projekts und muss nie eingecheckt werden. Berichte zeigen die Anzahl der Datensätze, den Quell-Hash, den generierten Index-Hash und die Aktualisierungszeit an.

Domain-Übereinstimmungen sind Warnungen, weil vorher bösartige Infrastruktur behoben oder neu zugewiesen werden kann. Ein gekürzter Hash oder ein historischer Domänenverweis reicht allein nicht aus, um Malware zu bestätigen.
